ヘッダーざっくりコーディング

--- a/assets/include/_header.html
+++ b/assets/include/_header.html
@@ -1,4 +1,23 @@
 <header class="header">
-  ヘッダー
-  <figure><img src="/assets/img/common/header_img_sumple.png"></figure>
+  <div class="header__inner">
+    <p class="header__logo"><a href="/"><img src="/assets/img/common/logo.png"></a></p>
+    <ul class="header__menu">
+      <li class="item"><a href="DUMMY">ランキング</a></li>
+      <li class="item"><a href="DUMMY">特価商品</a></li>
+      <li class="item"><a href="DUMMY">オススメ商品</a></li>
+      <li class="item"><a href="DUMMY">薬品買取</a></li>
+      <li class="item"><a href="DUMMY">ご利用ガイド</a></li>
+      <li class="item"><a href="DUMMY">お問い合わせ</a></li>
+    </ul>
+  </div>
+  <div class="header__subMenu__wrapper">
+    <ul class="header__subMenu">
+      <li class="item"><a href="DUMMY">商品</a></li>
+      <li class="item"><a href="DUMMY">ユーザー・申請</a></li>
+      <li class="item"><a href="DUMMY">ポイント・キャンペーン</a></li>
+      <li class="item"><a href="DUMMY">お問い合わせ</a></li>
+      <li class="item"><a href="DUMMY">ニュース</a></li>
+      <li class="item"><a href="DUMMY">管理</a></li>
+    </ul>
+  </div>
 </header>
