テンプレページ作成

--- a/assets/scss/_common/_variables.scss
+++ b/assets/scss/_common/_variables.scss
@@ -13,12 +13,14 @@ $bp_tablet_min: 481px;
 $bp_smartphone_max: 768px;
 
 ///// font
-$fontface_default: 'Noto Sans JP', "ヒラギノ角ゴ Pro W3", "Hiragino Kaku Gothic Pro", "メイリオ", Meiryo, Osaka, Arial, Helvetica, Verdana, sans-serif, "ＭＳ Ｐゴシック", "MS PGothic";
+$fontface_default: "ヒラギノ角ゴ Pro W3", "Hiragino Kaku Gothic Pro", "メイリオ", Meiryo, Osaka, Arial, Helvetica, Verdana, sans-serif, "ＭＳ Ｐゴシック", "MS PGothic";
 $fontface_en: 'Oswald', sans-serif;
 
 // テキストカラー
 $base_text_color: #333;
 $strong_text_color: #ff5420;
+$color_blue: #1F498C;
+$color_green: #55A619;
 
 
 //コンテンツ幅
