--- a/assets/scss/_common/_components.scss
+++ b/assets/scss/_common/_components.scss
@@ -32,4 +32,265 @@
 }
 
 // 見出し系
-.modHeading{}
+.modHeading{
+  &Lv1{
+    font-size: 24px;
+    color: $color_blue;
+    margin: 0 0 22px;
+  }
+  &Lv2{
+    font-size: 18px;
+    color: $color_blue;
+    border-bottom: 1px solid $color_green;
+    margin: 0 0 15px;
+    padding: 0 0 5px;
+  }
+}
+
+//ボタン
+.modBtn{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 40px;
+  padding: 10px;
+  font-size: 14px;
+  background: #fff;
+  border: 1px solid #ccc;
+  border-radius: 50px;
+  @include transition();
+  &:hover{
+    opacity: 0.7;
+  }
+
+  &--submit{
+    color: #fff;
+    background: $color_green;
+  }
+}
+
+//アイコン
+.modIcon{
+  &Upload{
+    display: inline-block;
+    vertical-align: middle;
+    width: 19px;
+    height: 18px;
+    margin: 0 5px 0 0;
+    background: url(#{$dir_img}common/icon_upload.svg) no-repeat 0 0;
+    background-size: 100%;
+  }
+  &Download{
+    display: inline-block;
+    vertical-align: middle;
+    width: 19px;
+    height: 18px;
+    margin: 0 5px 0 0;
+    background: url(#{$dir_img}common/icon_download.svg) no-repeat 0 0;
+    background-size: 100%;
+  }
+}
+
+//検索
+.modSearchBox{
+  margin: 0 0 40px;
+  padding: 25px 30px;
+  background: #F2F2F2;
+  border-radius: 10px;
+  &__cont{
+    &__title{
+      font-weight: bold;
+      margin: 0 0 8px;
+    }
+    &__item{
+      +.modSearchBox__cont__title{
+        border-top: 1px solid #ccc;
+        margin: 20px 0 0;
+        padding: 26px 0 0;
+      }
+    }
+  }
+  &__submit{
+    margin: 30px 0 0;
+    .modBtn{
+      width: 128px;
+      margin: 0 auto;
+    }
+  }
+}
+.modSearchResults{
+  &__top{
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-end;
+    margin: 0 0 20px;
+    &__btn{
+      display: flex;
+      justify-content: flex-end;
+      margin: 0 0 0 auto;
+      >li{
+        width: 170px;
+        margin: 0 0 0 10px;
+      }
+    }
+    &__error{
+      color: #D83245;
+    }
+  }
+
+  &__table{
+    white-space: nowrap;
+    overflow-x: auto;
+  }
+}
+
+//フォーム
+.modForm{
+  //input
+  &Input{
+    display: block;
+    width: 100%;
+    height: 32px;
+    padding: 10px;
+    border: 1px solid #ccc;
+    background: #fff;
+    font-size: 14px;
+  }
+
+  //radio
+  &Radio{
+    position: relative;
+    cursor: pointer;
+    >span{
+      position: relative;
+      padding: 0 0 0 25px;
+      &::before,
+      &::after{
+        content: "";
+        display: block;
+        position: absolute;
+        top: 50%;
+        left: 0;
+        border-radius: 100%;
+        transform: translateY(-50%);
+      }
+      &::before{
+        width: 18px;
+        height: 18px;
+        border: 1px solid #ccc;
+        background: #fff;
+      }
+      &::after{
+        opacity: 0;
+        width: 8px;
+        height: 8px;
+        left: 6px;
+        background: $color_green;
+      }
+    }
+    >input{
+      opacity: 0;
+      position: absolute;
+      top: 0;
+      left: 0;
+      &:checked + span::after{
+        opacity: 1;
+      }
+    }
+    &List{
+      display: flex;
+      align-items: center;
+      &__item{
+        margin: 0 5px 0 0;
+      }
+    }
+  }
+
+  //box
+  &Box{
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+    margin: 0 0 0 -80px;
+    &+&{
+      margin-top: 24px;
+    }
+    &__title{
+      width: 100px;
+      margin: 10px 0 0 80px;
+      padding: 0 10px 0 0;
+      &--right{
+        text-align: right;
+      }
+    }
+    &__input{
+      width: 200px;
+      margin: 10px 0 0;
+      &__line{
+        display: flex;
+        align-items: center;
+        .input{
+          width: 70px;
+        }
+        .mark{
+          padding: 0 10px;
+          &:last-child{
+            padding-right: 0;
+          }
+        }
+      }
+    }
+    &__radio{
+      display: flex;
+      flex-wrap: wrap;
+      margin: 0 0 0 -54px;
+      &__item{
+        margin: 5px 0 0 54px;
+        >dl{
+          display: flex;
+          align-items: center;
+          >dt{
+            margin: 0 10px 0 0;
+          }
+        }
+      }
+    }
+
+    &--ml0{
+      margin-left: 0;
+    }
+    &--2col{
+      margin-left: -260px;
+      .modFormBox__title{
+        margin-left: 260px;
+      }
+    }
+  }
+}
+
+//テーブル
+.modTable{
+  width: 100%;
+  th,td{
+    padding: 9px 10px 7px;
+    text-align: center;
+    border: 1px solid #707070;
+    &.error{
+      color: #D83245;
+      background: #FFE0E0;
+    }
+    &.focus{
+      background: #D9ECFF;
+    }
+    &.strong{
+      color: $color_green;
+    }
+  }
+  th{
+    font-size: 12px;
+  }
+  td{
+    font-size: 10px;
+  }
+}
