--- a/assets/scss/_common/_layout.scss
+++ b/assets/scss/_common/_layout.scss
@@ -37,3 +37,13 @@ a {
   display: block;
   clear: both;
 }
+
+.contents{
+  max-width: $base_content_width;
+  margin: 53px auto 0;
+  padding: 0 0 100px;
+}
+
+.section{
+  margin: 30px 0 0;
+}
