--- a/assets/scss/_common/_components.scss
+++ b/assets/scss/_common/_components.scss
@@ -68,6 +68,15 @@
     color: #fff;
     background: $color_green;
   }
+  &List{
+    display: flex;
+    justify-content: flex-end;
+    margin: 0 0 0 auto;
+    >li{
+      width: 170px;
+      margin: 0 0 0 10px;
+    }
+  }
 }
 
 //アイコン
@@ -183,6 +192,9 @@
     border: 1px solid #ccc;
     background: #fff;
     font-size: 14px;
+    &--textarea {
+      min-height: 100px;
+    }
   }
 
   //radio
@@ -322,35 +334,151 @@
   }
 }
 
+//汎用リスト
+.modDList {
+  &00 {
+    margin-top: 25px;
+    &__item {
+      &:not(:first-child){
+        margin: 20px 0 0;
+      }
+      &__inner {
+        display: flex;
+        .title {
+          width: 100px;
+        }
+        .body {
+          width: auto;
+          min-width: 700px;
+        }
+      }
+    }
+  }
+  &01 {
+    &__item {
+      padding-bottom: 14px;
+      border-bottom: 1px solid #ccc;
+      &:not(:first-child){
+        margin: 13px 0 0;
+      }
+      &__inner {
+        display: flex;
+        .title {
+          width: 200px;
+        }
+        .body {
+          width: calc(100% - 200px);
+        }
+      }
+    }
+  }
+  &02 {
+    display: flex;
+    flex-wrap: wrap;
+    margin: 0 -40px 0 0;
+    &__item {
+      width: 260px;
+      margin: 0 40px 30px 0;
+      &__inner {
+        display: flex;
+        flex-direction: column;
+        height: 100%;
+        .title {
+        }
+        .body {
+          margin: auto 0 0;
+          &__field {
+            height: 260px;
+            border: 1px solid #707070;
+            &__inner {
+              position: relative;
+              width: 100%;
+              height: 100%;
+            }
+            &--upLoad {
+              border: 1px dashed #ccc;
+            }
+            .btn {
+              display: flex;
+              justify-content: center;
+              align-items: center;
+              position: absolute;
+              width: 35px;
+              height: 35px;
+              padding: 0;
+              margin: 0;
+              border-radius: 50%;
+              cursor: pointer;
+              &:before {
+                content: '';
+                display: block;
+              }
+              &--delete {
+                top: 10px;
+                right: 10px;
+                border: 1px solid #ccc;
+                &:before {
+                  width: 12px;
+                  height: 12px;
+                  background: url(#{$dir_img}common/icon_delete_thin.svg) no-repeat 0 0;
+                  background-size: 100%;
+                }
+              }
+              &--upLoad {
+                top: 50%;
+                left: 50%;
+                border: 1px solid #55A619;
+                transform: translate(-50%, -50%);
+                &:before {
+                  width: 13px;
+                  height: 13px;
+                  background: url(#{$dir_img}common/icon_add_thin.png) no-repeat 0 0;
+                  background-size: 100%;
+                }
+                input {
+                  display: none;
+                }
+              }
+            }
+          }
+        }
+      }
+    }
+  }
+}
+
 //カラムレイアウト
 .modCol{
   display: flex;
   flex-wrap: wrap;
   width: 1200px;
-  &.col2 >*{
+  &.col2,
+  &--col2 {
+    >*{
       width: 560px;
       margin-right: 40px;
-		margin-bottom: 40px;
-	}
-	&.col3 >*{
-		width: 380px;
-		margin-bottom: 40px;
-	}
-	&.col3 >*:not(:nth-child(3n)){
-		margin-right: 30px;
-	}
-	&.col4 >*{
-		width: 285px;
-		margin-bottom: 40px;
-	}
-	&.col4 >*:not(:nth-child(4n)){
-		margin-right: 20px;
-	}
-	&.col5 >*{
-		width: 220px;
-		margin-bottom: 40px;
-	}
-	&.col5 >*:not(:nth-child(5n)){
-		margin-right: 25px;
-	}
+      margin-bottom: 40px;
+    }
+  }
+  &.col3 >*{
+    width: 380px;
+    margin-bottom: 40px;
+  }
+  &.col3 >*:not(:nth-child(3n)){
+    margin-right: 30px;
+  }
+  &.col4 >*{
+    width: 285px;
+    margin-bottom: 40px;
+  }
+  &.col4 >*:not(:nth-child(4n)){
+    margin-right: 20px;
+  }
+  &.col5 >*{
+    width: 220px;
+    margin-bottom: 40px;
+  }
+  &.col5 >*:not(:nth-child(5n)){
+    margin-right: 25px;
+  }
 }
