--- a/assets/css/common.css
+++ b/assets/css/common.css
@@ -516,6 +516,12 @@ a {
   margin: 53px auto 0;
   padding: 0 0 100px;
 }
+.contents__top {
+  display: flex;
+}
+.contents__top + .section {
+  margin: 0;
+}
 
 .section {
   margin: 30px 0 0;
@@ -590,3 +596,5 @@ a {
     color: #00f;
   }
 }
+
+/*# sourceMappingURL=common.css.map */
