--- a/assets/scss/_common/_components.scss
+++ b/assets/scss/_common/_components.scss
@@ -45,6 +45,11 @@
     margin: 0 0 15px;
     padding: 0 0 5px;
   }
+  &Lv3{
+    font-size: 16px;
+    margin: 0 0 15px;
+    padding: 0 0 5px;
+  }
 }
 
 //ボタン
@@ -432,6 +437,80 @@
                 &:before {
                   width: 13px;
                   height: 13px;
+                  background: url(#{$dir_img}common/icon_add_thin.png) no-repeat 0 0;
+                  background-size: 100%;
+                }
+                input {
+                  display: none;
+                }
+              }
+            }
+          }
+        }
+      }
+    }
+  }
+  &03 {
+    display: flex;
+    flex-wrap: wrap;
+    margin: 0;
+    &__item {
+      width: 285px;
+      margin: 0 20px 25px 0;
+      &:nth-child(4n) {
+        margin: 0 0 25px 0;
+      }
+      &__inner {
+        display: flex;
+        flex-direction: column;
+        height: 100%;
+        .title {
+        }
+        .body {
+          margin: auto 0 0;
+          &__cate,
+          &__tag {
+            height: 50px;
+            border: 1px solid #707070;
+            &__inner {
+              position: relative;
+              width: 100%;
+              height: 100%;
+            }
+            &--upLoad {
+              border: 1px dashed #ccc;
+            }
+            .btn {
+              display: flex;
+              justify-content: center;
+              align-items: center;
+              position: absolute;
+              width: 28px;
+              height: 28px;
+              padding: 0;
+              margin: 0;
+              border-radius: 50%;
+              cursor: pointer;
+              &:before {
+                content: '';
+                display: block;
+              }
+              &--cateTxt {
+                margin: 0 auto;
+                padding: 0;
+                width: 100%;
+                height: 100%;
+                display: flex;
+                color: $color_green;
+              }
+              &--upLoad {
+                top: 50%;
+                left: 50%;
+                border: 1px solid #55A619;
+                transform: translate(-50%, -50%);
+                &:before {
+                  width: 12px;
+                  height: 12px;
                   background: url(#{$dir_img}common/icon_add_thin.png) no-repeat 0 0;
                   background-size: 100%;
                 }
