--- a/assets/scss/_common/_components.scss
+++ b/assets/scss/_common/_components.scss
@@ -502,6 +502,7 @@
                 height: 100%;
                 display: flex;
                 color: $color_green;
+                font-size: 14px;
               }
               &--upLoad {
                 top: 50%;
