--- a/assets/scss/_common/_components.scss
+++ b/assets/scss/_common/_components.scss
@@ -495,7 +495,7 @@
                 content: '';
                 display: block;
               }
-              &--cateTxt {
+              &--cateTit {
                 margin: 0 auto;
                 padding: 0;
                 width: 100%;
@@ -503,6 +503,21 @@
                 display: flex;
                 color: $color_green;
                 font-size: 14px;
+              }
+              &--delete {
+                position: absolute;
+                width: 20px;
+                height: 20px;
+                top: 5px;
+                right: 5px;
+                border: 1px solid #ccc;
+                z-index: 10;
+                &:before {
+                  width: 8px;
+                  height: 8px;
+                  background: url(#{$dir_img}common/icon_delete_thin.svg) no-repeat 0 0;
+                  background-size: 100%;
+                }
               }
               &--upLoad {
                 top: 50%;
