--- a/assets/css/common.css
+++ b/assets/css/common.css
@@ -213,6 +213,22 @@ textarea::placeholder {
   width: 170px;
   margin: 0 0 0 10px;
 }
+.modBtn--backBtn {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 40px auto;
+}
+.modBtn--backBtn .btn--pageback {
+  display: inline-block;
+  vertical-align: middle;
+  width: 180px;
+  height: 40px;
+  margin: 0;
+  background: url(/assets/img/common/btn_back_page.svg) no-repeat 0 0;
+  background-size: 100%;
+  text-indent: -9999px;
+}
 
 .modIconUpload {
   display: inline-block;
