--- a/assets/scss/_common/_components.scss
+++ b/assets/scss/_common/_components.scss
@@ -126,6 +126,42 @@
     background: url(#{$dir_img}common/icon_save.svg) no-repeat 0 0;
     background-size: 100%;
   }
+  &Setting{
+    display: inline-block;
+    vertical-align: middle;
+    width: 21px;
+    height: 21px;
+    margin: 0 5px 0 0;
+    background: url(#{$dir_img}common/icon_setting.svg) no-repeat 0 0;
+    background-size: 100%;
+  }
+  &Calendar{
+    display: inline-block;
+    vertical-align: middle;
+    width: 17px;
+    height: 18px;
+    margin: 0 5px 0 0;
+    background: url(#{$dir_img}common/icon_cal.svg) no-repeat 0 0;
+    background-size: 100%;
+  }
+  &Select{
+    display: inline-block;
+    vertical-align: middle;
+    width: 10px;
+    height: 6px;
+    margin: 0 0 0 5px;
+    background: url(#{$dir_img}common/icon_select.svg) no-repeat 0 0;
+    background-size: 100%;
+  }
+  &Delete{
+    display: inline-block;
+    vertical-align: middle;
+    width: 10px;
+    height: 6px;
+    margin: 0 5px 0 0;
+    background: url(#{$dir_img}common/icon_delete.svg) no-repeat 0 0;
+    background-size: 100%;
+  }
 }
 
 //検索
@@ -246,6 +282,12 @@
     }
   }
 
+  //Check
+  &Check{
+    position: relative;
+    cursor: pointer;
+  }
+
   //box
   &Box{
     display: flex;
@@ -266,6 +308,22 @@
     &__input{
       width: 200px;
       margin: 10px 0 0;
+      .select {
+        position: relative;
+        display: inline-block;
+        padding: 6px 10px;
+        border: 1px solid #ccc;
+        background: #fff;
+        font-size: 14px;
+      }
+      .calendar {
+      width: 240px;
+      display: inline-block;
+      padding: 6px 10px;
+      border: 1px solid #ccc;
+      background: #fff;
+      font-size: 14px;
+      }
       &__line{
         display: flex;
         align-items: center;
@@ -332,6 +390,9 @@
   td{
     font-size: 10px;
   }
+  &__WidthAuto {
+    width: auto;
+  }
 }
 
 //汎用リスト
@@ -370,6 +431,25 @@
           width: calc(100% - 200px);
         }
       }
+    }
+    .input {
+      display: inline-block;
+      width: 100px;
+    }
+    .select {
+      position: relative;
+      display: inline-block;
+      padding: 6px 10px;
+      border: 1px solid #ccc;
+      background: #fff;
+      font-size: 14px;
+    }
+    .calendar {
+      display: inline-block;
+      padding: 6px 10px;
+      border: 1px solid #ccc;
+      background: #fff;
+      font-size: 14px;
     }
   }
   &02 {
@@ -447,6 +527,44 @@
   }
 }
 
+//フォーム
+.modPagination{
+  display: flex;
+    justify-content: center;
+    border: 1px solid #ccc;
+    border-radius: 15px;
+    max-width: 800px;
+    margin: 0 auto;
+    padding: 5px;
+    line-height: 1;
+    &__item {
+        margin: 0 8px;
+    }
+    a {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        width: 28px;
+        height: 28px;
+    }
+    .is-prev {
+        width: 105px;
+        border-right: 1px solid #ccc;
+        margin-right: 20px;
+    }
+    .is-next {
+        width: 105px;
+        border-left: 1px solid #ccc;
+        margin-left: 20px;
+    }
+    .is-current {
+        background: $color_blue;
+        color: #fff;
+        font-weight: bold;
+        border-radius: 5px;
+    }
+}
+
 //カラムレイアウト
 .modCol{
   display: flex;
@@ -463,22 +581,22 @@
   &.col3 >*{
     width: 380px;
     margin-bottom: 40px;
-  }
-  &.col3 >*:not(:nth-child(3n)){
-    margin-right: 30px;
+    :not(:nth-child(3n)){
+      margin-right: 30px;
+    }
   }
   &.col4 >*{
     width: 285px;
     margin-bottom: 40px;
-  }
-  &.col4 >*:not(:nth-child(4n)){
-    margin-right: 20px;
+    :not(:nth-child(4n)){
+      margin-right: 20px;
+    }
   }
   &.col5 >*{
     width: 220px;
     margin-bottom: 40px;
-  }
-  &.col5 >*:not(:nth-child(5n)){
-    margin-right: 25px;
+    :not(:nth-child(5n)){
+      margin-right: 25px;
+    }
   }
 }
