--- a/assets/scss/_common/_components.scss
+++ b/assets/scss/_common/_components.scss
@@ -45,6 +45,10 @@
     margin: 0 0 15px;
     padding: 0 0 5px;
   }
+  &Lv3{
+    font-size: 16px;
+    margin: 20px 0;
+  }
 }
 
 //ボタン
@@ -75,6 +79,43 @@
     >li{
       width: 170px;
       margin: 0 0 0 10px;
+    }
+  }
+  &--backBtn {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 40px auto;
+    // ボタン
+    .btn {
+      &--pageback {
+        display: inline-block;
+        vertical-align: middle;
+        width: 180px;
+        height: 40px;
+        margin: 0;
+        background: url(#{$dir_img}common/btn_back_page.svg) no-repeat 0 0;
+        background-size: 100%;
+        text-indent: -9999px;
+      }
+    }
+  }
+
+  &--deleteBtn {
+    display: flex;
+    margin: 20px 0;
+    // ボタン
+    .btn {
+      &--delete {
+        display: inline-block;
+        vertical-align: middle;
+        width: 180px;
+        height: 40px;
+        margin: 0;
+        background: url(#{$dir_img}common/btn_delete.svg) no-repeat 0 0;
+        background-size: 100%;
+        text-indent: -9999px;
+      }
     }
   }
 }
@@ -124,6 +165,15 @@
     height: 18px;
     margin: 0 5px 0 0;
     background: url(#{$dir_img}common/icon_save.svg) no-repeat 0 0;
+    background-size: 100%;
+  }
+  &Tag{
+    display: inline-block;
+    vertical-align: middle;
+    width: 12px;
+    height: 12px;
+    margin: 0 5px 0 0;
+    background: url(#{$dir_img}common/icon_tag.svg) no-repeat 0 0;
     background-size: 100%;
   }
 }
@@ -198,7 +248,7 @@
   }
 
   //radio
-  &Radio{
+  &Radio {
     position: relative;
     cursor: pointer;
     >span{
@@ -242,6 +292,55 @@
       align-items: center;
       &__item{
         margin: 0 5px 0 0;
+      }
+    }
+  }
+
+  //checkbox
+  &Checkbox {
+    position: relative;
+    cursor: pointer;
+    >span{
+      position: relative;
+      padding: 0 0 0 25px;
+      &::before,
+      &::after{
+        content: "";
+        display: block;
+        position: absolute;
+        top: 50%;
+        left: 0;
+        border-radius: 100%;
+        transform: translateY(-50%);
+      }
+      &::before{
+        width: 18px;
+        height: 18px;
+        border: 1px solid #ccc;
+        background: #fff;
+      }
+      &::after{
+        opacity: 0;
+        width: 8px;
+        height: 8px;
+        left: 6px;
+        background: $color_green;
+      }
+    }
+    >input{
+      opacity: 0;
+      position: absolute;
+      top: 0;
+      left: 0;
+      &:checked + span::after{
+        opacity: 1;
+      }
+    }
+    &List{
+      display: flex;
+      align-items: center;
+      &__item{
+        margin: 0 15px 0 0;
       }
     }
   }
@@ -445,6 +544,122 @@
       }
     }
   }
+  &03 {
+    display: flex;
+    flex-wrap: wrap;
+    margin: 0;
+    &__item {
+      width: 285px;
+      margin: 0 20px 25px 0;
+      &:nth-child(4n) {
+        margin: 0 0 25px 0;
+      }
+      &__tag {
+        width: 224px;
+        margin: 0 20px 25px 0;
+        &:nth-child(5n) {
+          margin: 0 0 25px 0;
+        }
+      }
+      &__inner {
+        display: flex;
+        flex-direction: column;
+        height: 100%;
+        .title {
+        }
+        .body {
+          margin: auto 0 0;
+          &__tag {
+            width: 198px;
+            margin: 0 0 0 15px;
+            &--upLoad {
+              width: 191px;
+              margin: 0 0 0 33px;
+            }
+          }
+          &__cate,
+          &__tag {
+            height: 50px;
+            border: 1px solid #707070;
+            &__inner {
+              position: relative;
+              width: 100%;
+              height: 100%;
+            }
+            &--upLoad {
+              border: 1px dashed #ccc;
+            }
+            .btn {
+              display: flex;
+              justify-content: center;
+              align-items: center;
+              position: absolute;
+              width: 28px;
+              height: 28px;
+              padding: 0;
+              margin: 0;
+              border-radius: 50%;
+              cursor: pointer;
+              &:before {
+                content: '';
+                display: block;
+              }
+              &--cateTit {
+                margin: 0 auto;
+                padding: 0;
+                width: 100%;
+                height: 100%;
+                display: flex;
+                color: $color_green;
+                font-size: 14px;
+              }
+              &--tag {
+                margin: 0;
+                padding: 0 0 0 15px;
+                width: 100%;
+                height: 100%;
+                display: flex;
+                justify-content: left;
+                align-items: left;
+                color: $color_green;
+                font-size: 14px;
+              }
+              &--delete {
+                position: absolute;
+                width: 20px;
+                height: 20px;
+                top: 5px;
+                right: 5px;
+                border: 1px solid #ccc;
+                z-index: 10;
+                &:before {
+                  width: 8px;
+                  height: 8px;
+                  background: url(#{$dir_img}common/icon_delete_thin.svg) no-repeat 0 0;
+                  background-size: 100%;
+                }
+              }
+              &--upLoad {
+                top: 50%;
+                left: 50%;
+                border: 1px solid #55A619;
+                transform: translate(-50%, -50%);
+                &:before {
+                  width: 12px;
+                  height: 12px;
+                  background: url(#{$dir_img}common/icon_add_thin.png) no-repeat 0 0;
+                  background-size: 100%;
+                }
+                input {
+                  display: none;
+                }
+              }
+            }
+          }
+        }
+      }
+    }
+  }
 }
 
 //カラムレイアウト
@@ -480,5 +695,65 @@
   }
   &.col5 >*:not(:nth-child(5n)){
     margin-right: 25px;
+  }
+}
+
+// Checkbox
+.Checkbox {
+  padding: 0;
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+  &-DummyInput {
+    position: relative;
+    top: 0;
+    left: 0;
+    display: block;
+    width: 20px;
+    height: 20px;
+    background: #FFF;
+    border:1px solid #CCC;
+  }
+  &-labelTxt {
+    margin-left: 10px;
+    display: block;
+  }
+  &:hover > .Checkbox-DummyInput{
+    background: #FFF;
+  }
+  &-Input {
+    margin: 0;
+    width: 0;
+    opacity: 0;
+    &:focus + .Checkbox-DummyInput{
+      background: #FFF;
+    }
+    &:checked + .Checkbox-DummyInput {
+      background: $color_green;
+    }
+    &:checked + .Checkbox-DummyInput::before {
+      content: "";
+      display: block;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      width: 35%;
+      height: 2px;
+      transform: translate(-3px, 3px) rotateZ(-135deg);
+      transform-origin: 1px 1px;
+      background: #FFFFFF;
+    }
+    &:checked + .Checkbox-DummyInput::after {
+      content: "";
+      display: block;
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      width: 70%;
+      height: 2px;
+      transform: translate(-2px, 3px) rotateZ(-45deg);
+      transform-origin: 1px 1px;
+      background: #FFFFFF;
+    }
   }
 }
