--- a/assets/scss/_common/_components.scss
+++ b/assets/scss/_common/_components.scss
@@ -176,6 +176,15 @@
     background: url(#{$dir_img}common/icon_tag.svg) no-repeat 0 0;
     background-size: 100%;
   }
+  &Search{
+    display: inline-block;
+    vertical-align: middle;
+    width: 12px;
+    height: 12px;
+    margin: 0 5px 0 0;
+    background: url(#{$dir_img}common/icon_search.svg) no-repeat 0 0;
+    background-size: 100%;
+  }
 }
 
 //検索
@@ -244,6 +253,56 @@
     font-size: 14px;
     &--textarea {
       min-height: 100px;
+    }
+  }
+
+  //search
+  &Search {
+    display: block;
+    width: 350px;
+    height: 36px;
+    margin: 0 0 20px;
+    padding: 0;
+    border: 1px solid #ccc;
+    background: #fff;
+    font-size: 14px;
+
+    .searchForm {
+      position: relative;
+      &-input {
+        margin: 0;
+        padding: 5px;
+        width: 100%;
+        height: 35px;
+      }
+      &-submit {
+        position: absolute;
+        width: 35px;
+        height: 35px;
+        /* top: calc(50% - 19px); */
+        right: 0;
+        border-radius: 0 4px 4px 0;
+        &::before {
+          position: absolute;
+          content: "";
+          width: 10px;
+          height: 10px;
+          top: calc(50% - 7px);
+          left: calc(50% - 7px);
+          border-radius: 50%;
+          box-shadow: 0 0 0 2px #ccc;
+        }
+       &::after {
+          position: absolute;
+          content: "";
+          width: 8px;
+          height: 6px;
+          top: calc(50% + 4px);
+          left: calc(50% + -1px);
+          border-top: solid 2px #CCC;
+          transform: rotate(45deg);
+        }
+      }
     }
   }
 
@@ -703,6 +762,7 @@
   padding: 0;
   display: flex;
   align-items: center;
+  justify-content: center;
   cursor: pointer;
   &-DummyInput {
     position: relative;
