--- a/assets/css/common.css
+++ b/assets/css/common.css
@@ -213,22 +213,6 @@ textarea::placeholder {
   width: 170px;
   margin: 0 0 0 10px;
 }
-.modBtn--backBtn {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  margin: 40px auto;
-}
-.modBtn--backBtn .btn--pageback {
-  display: inline-block;
-  vertical-align: middle;
-  width: 180px;
-  height: 40px;
-  margin: 0;
-  background: url(/assets/img/common/btn_back_page.svg) no-repeat 0 0;
-  background-size: 100%;
-  text-indent: -9999px;
-}
 
 .modIconUpload {
   display: inline-block;
@@ -685,6 +669,32 @@ textarea::placeholder {
 }
 .modCol.col5 > *:not(:nth-child(5n)) {
   margin-right: 25px;
+}
+
+.modImgBtn {
+  display: flex;
+  width: 100%;
+  height: 40px;
+  padding: 10px;
+  -wewbkit-transition: 0.3s ease-out;
+  transition: 0.3s ease-out;
+}
+.modImgBtn--centerBtn {
+  align-items: center;
+  justify-content: center;
+}
+.modImgBtn:hover {
+  opacity: 0.7;
+}
+.modImgBtn .btn--pageback {
+  display: inline-block;
+  vertical-align: middle;
+  width: 180px;
+  height: 40px;
+  margin: 0;
+  background: url(/assets/img/common/btn_back_page.svg) no-repeat 0 0;
+  background-size: 100%;
+  text-indent: -9999px;
 }
 
 * {
