--- a/assets/scss/_common/_components.scss
+++ b/assets/scss/_common/_components.scss
@@ -68,7 +68,6 @@
   &:hover{
     opacity: 0.7;
   }
-
   &--submit{
     color: #fff;
     background: $color_green;
@@ -80,26 +79,6 @@
     >li{
       width: 170px;
       margin: 0 0 0 10px;
-    }
-  }
-  &--backBtn {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin: 40px auto;
-
-    // ボタン
-    .btn {
-      &--pageback {
-        display: inline-block;
-        vertical-align: middle;
-        width: 180px;
-        height: 40px;
-        margin: 0;
-        background: url(#{$dir_img}common/btn_back_page.svg) no-repeat 0 0;
-        background-size: 100%;
-        text-indent: -9999px;
-      }
     }
   }
 }
@@ -595,5 +574,35 @@
   }
   &.col5 >*:not(:nth-child(5n)){
     margin-right: 25px;
+  }
+}
+
+
+// 画像ボタン
+.modImgBtn{
+  display: flex;
+  width: 100%;
+  height: 40px;
+  padding: 10px;
+  @include transition();
+  // center
+  &--centerBtn {
+    align-items: center;
+    justify-content: center;
+  }
+  &:hover{
+    opacity: 0.7;
+  }
+  .btn {
+    &--pageback {
+      display: inline-block;
+      vertical-align: middle;
+      width: 180px;
+      height: 40px;
+      margin: 0;
+      background: url(#{$dir_img}common/btn_back_page.svg) no-repeat 0 0;
+      background-size: 100%;
+      text-indent: -9999px;
+    }
   }
 }
