--- a/assets/scss/_common/_components.scss
+++ b/assets/scss/_common/_components.scss
@@ -1,3 +1,5 @@
+// main: ../style.scss
+
 /* 汎用モジュール
 ========================================================*/
 // PC/SP 出し分け
@@ -66,6 +68,7 @@
   &:hover{
     opacity: 0.7;
   }
+
   &--submit{
     color: #fff;
     background: $color_green;
@@ -452,86 +455,54 @@
     flex-wrap: wrap;
     margin: 0;
     &__item {
+      position: relative;
       width: 285px;
       margin: 0 20px 25px 0;
       &:nth-child(4n) {
         margin: 0 0 25px 0;
       }
-      &__inner {
+      > .btn {
         display: flex;
-        flex-direction: column;
-        height: 100%;
-        .title {
+        justify-content: center;
+        align-items: center;
+        height: 50px;
+        border: 1px solid #707070;
+        font-size: 14px;
+        color: #55A619;
+        cursor: pointer;
+        &--delete {
+          position: absolute;
+          width: 20px;
+          height: 20px;
+          top: 5px;
+          right: 5px;
+          padding: 0;
+          border: 1px solid #ccc;
+          border-radius: 50%;
+          z-index: 10;
+          &:before {
+            content: '';
+            display: block;
+            width: 100%;
+            height: 100%;
+            background: url(#{$dir_img}common/icon_delete_thin.svg) no-repeat 50% 50%;
+            background-size: 8px 8px;
+          }
         }
-        .body {
-          margin: auto 0 0;
-          &__cate,
-          &__tag {
-            height: 50px;
-            border: 1px solid #707070;
-            &__inner {
-              position: relative;
-              width: 100%;
-              height: 100%;
-            }
-            &--upLoad {
-              border: 1px dashed #ccc;
-            }
-            .btn {
-              display: flex;
-              justify-content: center;
-              align-items: center;
-              position: absolute;
-              width: 28px;
-              height: 28px;
-              padding: 0;
-              margin: 0;
-              border-radius: 50%;
-              cursor: pointer;
-              &:before {
-                content: '';
-                display: block;
-              }
-              &--cateTit {
-                margin: 0 auto;
-                padding: 0;
-                width: 100%;
-                height: 100%;
-                display: flex;
-                color: $color_green;
-                font-size: 14px;
-              }
-              &--delete {
-                position: absolute;
-                width: 20px;
-                height: 20px;
-                top: 5px;
-                right: 5px;
-                border: 1px solid #ccc;
-                z-index: 10;
-                &:before {
-                  width: 8px;
-                  height: 8px;
-                  background: url(#{$dir_img}common/icon_delete_thin.svg) no-repeat 0 0;
-                  background-size: 100%;
-                }
-              }
-              &--upLoad {
-                top: 50%;
-                left: 50%;
-                border: 1px solid #55A619;
-                transform: translate(-50%, -50%);
-                &:before {
-                  width: 12px;
-                  height: 12px;
-                  background: url(#{$dir_img}common/icon_add_thin.png) no-repeat 0 0;
-                  background-size: 100%;
-                }
-                input {
-                  display: none;
-                }
-              }
-            }
+        &--upLoad {
+          border: 1px dashed #ccc;
+          &:before {
+            content: '';
+            display: block;
+            width: 28px;
+            height: 28px;
+            border: 1px solid #55A619;
+            border-radius: 50%;
+            background: url(#{$dir_img}common/icon_add_thin.png) no-repeat 50% 50%;
+            background-size: 12px 12px;
+          }
+          input {
+            display: none;
           }
         }
       }
@@ -574,8 +545,6 @@
     margin-right: 25px;
   }
 }
-
-
 // 画像ボタン
 .modImgBtn{
   display: flex;
