--- a/assets/scss/_common/_components.scss
+++ b/assets/scss/_common/_components.scss
@@ -238,6 +238,7 @@
         padding: 5px 38px 5px 5px;
         width: 100%;
         height: 35px;
+        font-size: 15px;
       }
       &-submit {
         position: absolute;
@@ -254,7 +255,7 @@
           top: calc(50% - 7px);
           left: calc(50% - 7px);
           border-radius: 50%;
-          box-shadow: 0 0 0 2px #ccc;
+          box-shadow: 0 0 0 2px #000;
         }
        &::after {
           position: absolute;
@@ -263,7 +264,7 @@
           height: 6px;
           top: calc(50% + 4px);
           left: calc(50% + -1px);
-          border-top: solid 2px #CCC;
+          border-top: solid 2px #000;
           transform: rotate(45deg);
         }
       }
@@ -321,49 +322,68 @@
 
   //checkbox
   &Checkbox {
-    position: relative;
+    padding: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     cursor: pointer;
-    >span{
-      position: relative;
-      padding: 0 0 0 25px;
-      &::before,
-      &::after{
-        content: "";
-        display: block;
-        position: absolute;
-        top: 50%;
-        left: 0;
-        border-radius: 100%;
-        transform: translateY(-50%);
-      }
-      &::before{
-        width: 18px;
-        height: 18px;
-        border: 1px solid #ccc;
-        background: #fff;
-      }
-      &::after{
-        opacity: 0;
-        width: 8px;
-        height: 8px;
-        left: 6px;
-        background: $color_green;
-      }
-    }
-    >input{
-      opacity: 0;
-      position: absolute;
-      top: 0;
-      left: 0;
-      &:checked + span::after{
-        opacity: 1;
-      }
-    }
     &List{
       display: flex;
       align-items: center;
       &__item{
         margin: 0 15px 0 0;
+      }
+    }
+    &-input {
+      position: relative;
+      top: 0;
+      left: 0;
+      display: block;
+      width: 20px;
+      height: 20px;
+      background: #FFF;
+      border:1px solid #CCC;
+    }
+    &-tagname {
+      margin-left: 10px;
+      display: block;
+    }
+    &:hover > .modFormCheckbox-input{
+      background: #FFF;
+    }
+    >input {
+      margin: 0;
+      width: 0;
+      opacity: 0;
+      &:focus + .modFormCheckbox-input{
+        background: #FFF;
+      }
+      &:checked + .modFormCheckbox-input {
+        background: $color_green;
+      }
+      &:checked + .modFormCheckbox-input::before {
+        content: "";
+        display: block;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        width: 35%;
+        height: 2px;
+        transform: translate(-3px, 3px) rotateZ(-135deg);
+        transform-origin: 1px 1px;
+        background: #FFF;
+      }
+      &:checked + .modFormCheckbox-input::after {
+        content: "";
+        display: block;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        width: 70%;
+        height: 2px;
+        transform: translate(-2px, 3px) rotateZ(-45deg);
+        transform-origin: 1px 1px;
+        background: #FFF;
       }
     }
   }
@@ -718,67 +738,6 @@
   }
   &.col5 >*:not(:nth-child(5n)){
     margin-right: 25px;
-  }
-}
-
-// Checkbox
-.Checkbox {
-  padding: 0;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  cursor: pointer;
-  &-DummyInput {
-    position: relative;
-    top: 0;
-    left: 0;
-    display: block;
-    width: 20px;
-    height: 20px;
-    background: #FFF;
-    border:1px solid #CCC;
-  }
-  &-labelTxt {
-    margin-left: 10px;
-    display: block;
-  }
-  &:hover > .Checkbox-DummyInput{
-    background: #FFF;
-  }
-  &-Input {
-    margin: 0;
-    width: 0;
-    opacity: 0;
-    &:focus + .Checkbox-DummyInput{
-      background: #FFF;
-    }
-    &:checked + .Checkbox-DummyInput {
-      background: $color_green;
-    }
-    &:checked + .Checkbox-DummyInput::before {
-      content: "";
-      display: block;
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      width: 35%;
-      height: 2px;
-      transform: translate(-3px, 3px) rotateZ(-135deg);
-      transform-origin: 1px 1px;
-      background: #FFFFFF;
-    }
-    &:checked + .Checkbox-DummyInput::after {
-      content: "";
-      display: block;
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      width: 70%;
-      height: 2px;
-      transform: translate(-2px, 3px) rotateZ(-45deg);
-      transform-origin: 1px 1px;
-      background: #FFFFFF;
-    }
   }
 }
 
